--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_music_file_available">No music file available</string>
+    <string name="artists">Hello Artists</string>
+    <string name="folders">Hello Folders</string>
 </resources>
